# baildon

./: .gitignore  Cargo.toml  README.md
baildon/: Cargo.toml  README.md
baildon-glue/: Cargo.toml  README.md
baildon-glue/src/: glue.rs  main.rs
baildon-store/: Cargo.toml  README.md
baildon-store/src/: main.rs
baildon/benches/: baildon.rs
baildon/examples/: hello.rs  streaming.rs
baildon/src/: command.rs  lib.rs
baildon/src/btree/: baildon.rs  mod.rs  node.rs  sparse.rs  stream.rs
baildon/src/btree/baildon/: tests.rs
baildon/src/io/: file.rs  mod.rs  wal.rs
scripts/tests/: deleting-simple-fast.bash  deleting-simple-random.bash  deleting-simple-rev.bash  deleting-simple.bash  inserting-db-fast.bash  inserting-simple-fast.bash  inserting-simple-random.bash  inserting-simple-rev.bash  inserting-simple.bash
