[workspace]
resolver = "2"
members = [
    "baildon",
    "baildon-store",
    "baildon-glue"
]

[workspace.package]
version = "0.1.2"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/garypen/baildon"
homepage = "https://github.com/garypen/baildon"
documentation = "https://github.com/garypen/baildon#readme"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
libc = "0.2.172"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
