[package]
name = "baildon-store"
version.workspace = true
description = "B+Tree CLI"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["key-value-store", "kv-store", "key-value", "btree", "async"]
categories = ["asynchronous", "data-structures"]
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
baildon = { version = "0.1.2", path = "../baildon" }
rustyline.workspace = true
strum.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
